# sklearn2json

./: .coverage  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Limitations.md  README.md  bitbucket-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: ci.yml
sklearn2json/: __init__.py  classification.py  clustering.py  common_functions.py  csr.py  dimension_reduction.py  label_encoders.py  model_selector.py  regression.py  vectorizer.py
test/: helper_test.py  test_classification.py  test_clustering.py  test_csr.py  test_dimension_reduction.py  test_label_encoder.py  test_regression.py  test_sklearn2json.py  test_vectorizer.py
