# Main package description
[tool.poetry]
name = "sklearn2json"
version = "2023.2"
description = "Python library for converting Scikit-Learn models to JSON."
authors = [
    "MONTANA Knowledge Management ltd. <info@distiller.dev>"
]
license = "AGPL"
readme="README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
scikit-learn="^1.3.0"


[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
pre-commit = "*"
pytest = "*"
gitlint = "*"
isort = "*"
pyupgrade = "^2.29"
pylint = "^2.11.1"
requests = "^2.26.0"
pytest-random-order = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# DEVTOOLS CONFIG #

#BLACK
[tool.black]
line-length = 120
target-version = ['py39']
force-exclude = '''
  (
    digital-twin-distiller/resources/
  | tests/solver_script_references/
  )
'''
quiet = true


# COVERAGE
# https://coverage.readthedocs.io/en/6.1.1/config.html

[tool.coverage.run]
command_line = "-m pytest --random-order"
source = ['sklearn2json']
branch = true
# omit = []

[tool.coverage.report]
sort = "cover"
exclude_lines = [
    'if __name__ == "__main__":',
    'def __repr__',
    'def __str',
    '@(abc\.)?abstractmethod'
]
omit = ['test']



# ISORT
# https://pycqa.github.io/isort/docs/configuration/options.html

[tool.isort]
profile = "black"
line_length = 120
case_sensitive = true
use_parentheses = false
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
quiet = true

[tool.pylint.MASTER]
max-line-length = 120
fail-under = 0.85
ignore = ['LICENSE']
ignore-paths = ['tests', 'resources', 'examples']
disable = [
    "bad-continuation",
    "duplicate-code",
    "invalid-name",
    "missing-docstring",
    "too-few-public-methods",
]

# [too.pylint.message_control]
# max-line-length = 80
# disable = [
#   "missing-docstring",
#   "unused-argument",
#   "no-value-for-parameter",
#   "no-member",
#   "no-else-return",
#   "bad-whitespace",
#   "bad-continuation",
#   "line-too-long",
#   "fixme",
#   "protected-access",
#   "too-few-public-methods",
# ]
