[metadata]
name = m
version = 0.1.0
author = MONTANA Knowledge management ltd.
author_email = docutent@montana.hu
description = I/O for many mesh formats
url = https://github.com/nschloe/meshio
project_urls =
    Code=https://github.com/nschloe/meshio
    Issues=https://github.com/nschloe/meshio/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GPL License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities

keywords =
    json
    sklearn
    machine learning
    model deployment

[options]
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy
python_requires = >=3.7
