[metadata]
name = Sklearn2JSON
version = 2021.4.rc
description = "Save and load the Sklearn methods in  "
url = https://github.com/
project_urls =
    Donate = https://docutent.org
    Documentation = https://docutent.org
    Changes = https://docutent.org
    Source Code = https://docutent.org
    Issue Tracker = https://docutent.org
    Twitter = https://docutent.org
    Chat = https://docutent.org
maintainer = MONTANA Knowledge Management ltd.
maintainer_email = sklearn2json@docutent.org
long_description = file: README.md
long_description_content_type = text/markdown
license = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Platform :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Text Processing
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6
